--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "register-service-worker": "^1.7.1",
+    "vant": "^3.5.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
     "@vue/cli-plugin-babel": "~4.5.17",
     "@vue/cli-plugin-pwa": "~4.5.17",
     "@vue/cli-plugin-typescript": "~4.5.17",
     "@vue/cli-service": "~4.5.17",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "typescript": "~4.1.5",
     "vue-template-compiler": "^2.6.11"
   }
