--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hxx-h5-login",
+  "name": "vue-h5-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vant": "^3.5.1",
+    "vant": "^2.12.47",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2"
